infra/k8s/nats-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats-streaming:0.25.5
          args: [
            "-p", "4222",
            "-m", "8222",
            "-hbi","5s",
            "-hbt", "5s",
            "-hbf", "2",
            "-SD","-cid",
            "ticketing",
            "--cluster_id", "ticketing-456611",
            "--store", "file",
            "--dir", "/data/stan"
          ]
          ports:
            - containerPort: 4222
            - containerPort: 8222
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          volumeMounts:
            - name: nats-data
              mountPath: /data/stan
      volumes:
        - name: nats-data
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: nats-srv
spec:
  type: ClusterIP
  selector:
    app: nats
  ports:
    - name: client
      port: 4222
      targetPort: 4222
    - name: monitoring
      port: 8222
      targetPort: 8222
