infra/k8s/tickets-mongo-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tickets-mongo-depl
  labels:
    app: tickets-mongo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tickets-mongo
  template:
    metadata:
      labels:
        app: tickets-mongo
    spec:
      containers:
        - name: tickets-mongo
          image: mongo
          ports:
            - containerPort: 27017
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tickets-mongo-srv
spec:
  type: ClusterIP
  selector:
    app: tickets-mongo
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
